first draft of welcome page, to celebrate the game finally being winnable!

--- a/README
+++ b/README
@@ -1,1 +1,120 @@
-Hello World!
+Codename: Phosphorus Al
+=======================
+
+This is a game which you play on a grid, for example a 3x3 grid:
+
+<table border="1">
+    <tr>
+        <td> _0 </td>
+        <td> _0 </td>
+        <td> _0 </td>
+    </tr>
+    <tr>
+        <td> _0 </td>
+        <td> _0 </td>
+        <td> _0 </td>
+    </tr>
+    <tr>
+        <td> _0 </td>
+        <td> _0 </td>
+        <td> _0 </td>
+    </tr>
+</table>
+
+In turn, each player takes a place on the grid.
+
+Lets say that our players are "D" for Don and "W" for Willy.
+
+Don goes first and takes the top left corner:
+
+<table border="1">
+    <tr>
+        <td> D1 </td>
+        <td> _0 </td>
+        <td> _0 </td>
+    </tr>
+    <tr>
+        <td> _0 </td>
+        <td> _0 </td>
+        <td> _0 </td>
+    </tr>
+    <tr>
+        <td> _0 </td>
+        <td> _0 </td>
+        <td> _0 </td>
+    </tr>
+</table>
+
+So far, so good, a little bit like noughts and crosses, but don't worry, it's going to get a little more exciting.
+
+First of all, did you notice the number? Yep, not a nought or a cross, but a number!
+
+Anyway, Willy is going to take the top right hand corner:
+
+<table border="1">
+    <tr>
+        <td> D1 </td>
+        <td> _0 </td>
+        <td> W1 </td>
+    </tr>
+    <tr>
+        <td> _0 </td>
+        <td> _0 </td>
+        <td> _0 </td>
+    </tr>
+    <tr>
+        <td> _0 </td>
+        <td> _0 </td>
+        <td> _0 </td>
+    </tr>
+</table>
+
+
+Still underwhealmed? Fear not, it's going to get exciting right about now: that top left hand corner had two direct neighbours, Don's going to make his next move and add to that square, which from now on we're going to call atom, when he does, it's going to go pop and spread to the neighbouring atoms!
+
+Don makes his move:
+
+<table border="1">
+    <tr>
+        <td> D2 </td>
+        <td> _0 </td>
+        <td> W1 </td>
+    </tr>
+    <tr>
+        <td> _0 </td>
+        <td> _0 </td>
+        <td> _0 </td>
+    </tr>
+    <tr>
+        <td> _0 </td>
+        <td> _0 </td>
+        <td> _0 </td>
+    </tr>
+</table>
+
+And the square goes pop!
+
+<table border="1">
+    <tr>
+        <td> _0 </td>
+        <td> D1 </td>
+        <td> W0 </td>
+    </tr>
+    <tr>
+        <td> D1 </td>
+        <td> _0 </td>
+        <td> _0 </td>
+    </tr>
+    <tr>
+        <td> _0 </td>
+        <td> _0 </td>
+        <td> _0 </td>
+    </tr>
+</table>
+
+Wow, that's more exciting than noughts and crosses already!!!
+
+So, does that help Don, or anybody? Yes! When your atom goes pop, it steals the neighbouring atoms, even if they belong to the other player!
+
+Your objective is to steal control the whole board!
+
